Weight paint with mirror modifier does not accurate represent bone influence #35545

Closed
opened 2013-05-28 06:07:18 +02:00 by Tony Mullen · 7 comments

%%%--- Operating System, Graphics card ---
Windows 7 (on an iMac), Mac OS X (Macbook Air)

- Blender version with error, and version that worked ---

2.67a with error. Don't remember when this last worked as expected, but I'm sure it did at some point.

- Short description of error ---

When a mirrored mesh is parented to an Armature using automatic bone weights, deform weights are set correctly. However, when viewed in weight paint mode, display shows weight paint values also mirrored, incorrectly representing the bones' actual influence on the mirrored mesh.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

See attached image. Create mesh, add mirror modifier, add armature, parent mesh to armature with automatic weights.

%%%

%%%--- Operating System, Graphics card --- Windows 7 (on an iMac), Mac OS X (Macbook Air) - Blender version with error, and version that worked --- 2.67a with error. Don't remember when this last worked as expected, but I'm sure it did at some point. - Short description of error --- When a mirrored mesh is parented to an Armature using automatic bone weights, deform weights are set correctly. However, when viewed in weight paint mode, display shows weight paint values also mirrored, incorrectly representing the bones' actual influence on the mirrored mesh. - Steps for others to reproduce the error (preferably based on attached .blend file) --- See attached image. Create mesh, add mirror modifier, add armature, parent mesh to armature with automatic weights. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r57206.%%%

%%%fixed r57206.%%%

%%%After this commit, weights do not show on an object which has a mirror modifier at all, unless there is an armature modifier and armature set in the object field.

I did not know whether to make a separate report or not.

Cheers%%%

%%%After this commit, weights do not show on an object which has a mirror modifier at all, *unless* there is an armature modifier and armature set in the object field. I did not know whether to make a separate report or not. Cheers%%%

%%%Reopened, will check.%%%

%%%Reopened, will check.%%%

%%%Attached a file which doesn't show weights when the armature is disabled, will check on a fix.%%%

%%%Attached a file which doesn't show weights when the armature is disabled, will check on a fix.%%%

%%%fix for fix r57419.

If there are any further problems, best open a new report.%%%

%%%fix for fix r57419. If there are any further problems, best open a new report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35545
No description provided.