fix [#35545] Weight paint with mirror modifier does not accurate represent bone influence